Don't static_cast a child to a partition widget, use qobject_cast to make sure we don't get unintended side effects.

BUG:218532

svn path=/trunk/extragear/sysadmin/partitionmanager/; revision=1062049